# GreenWolf

./: CMakeLists.txt
CMake/: GWAddLibrary.cmake  GWGenerateGlobalHeader.cmake  GWInstallComponent.cmake  GWInstallPackage.cmake  GWTargetInstallResources.cmake  GWTargetTransitiveSources.cmake  gw-global-header.h.in  gw-package-config.cmake.in
GreenWolf/: CMakeLists.txt
GreenWolf/Core/: CMakeLists.txt  Foo.cpp  Foo.h  GreenWolfCoreConfig.cmake.in
